--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "noughtsandcrosses",
+    "name": "noughts-and-crosses",
     "description": "This project is really great.",
-    "slug": "noughtsandcrosses",
+    "slug": "noughts-and-crosses",
     "privacy": "public",
-    "sdkVersion": "27.0.0",
+    "sdkVersion": "26.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
